--- a/style.css
+++ b/style.css
@@ -9,12 +9,17 @@ p
 a:hover{
     color: red;
 }
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
 
 .column {
-    float: left;
     flex: 1;
     min-width: 280px;
-    max-width: 33%;
+    max-width: 300px;
     padding: 20px;
     border: 1px solid black;
     border-radius: 8px;
