--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ a:hover{
 .topnav {
     text-align: right;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
 .column {
     flex: 1;
     min-width: 280px;
